tests/errors/sign_01.f90
program sign_01
    print *, sign(1, 1_8)
end program